name:               aviation-weight-balance
version:            0.0.1
license:            BSD3
license-file:       LICENCE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>, Joshua Morris <ɯoɔ˙lᴉɐɯƃ@llǝʞsɐɥ+sᴉɹɹoɯuɥoɾɐnɥsoɾ>
maintainer:         Tony Morris, Joshua Morris
copyright:          Copyright (c) 2017-2019, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
synopsis:           Weight and Balance structures used in aviation.
category:           Aviation
description:        
  <<https://raw.githubusercontent.com/qfpl/assets/master/data61-transparent-bg.png>>
  .
  Weight and Balance used in aviation.

homepage:           https://github.com/data61/aviation-weight-balance
bug-reports:        https://github.com/data61/aviation-weight-balance/issues
cabal-version:      >= 1.10
build-type:         Simple
extra-source-files: changelog

source-repository   head
  type:             git
  location:         git@github.com:data61/aviation-weight-balance.git

library
  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 4.13
                    , lens >= 4.15 && < 4.18
                    , aviation-units >= 0.0.1 && < 0.1
  if impl(ghc < 8)
    build-depends:
      semigroups >= 0.9 && < 0.19
                    
  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.Aviation.WB
                    Data.Aviation.WB.Arm
                    Data.Aviation.WB.Arm.Arm
                    Data.Aviation.WB.Arm.ArmRange
                    Data.Aviation.WB.Arm.ArmRangeLower
                    Data.Aviation.WB.Arm.ArmStatic
                    Data.Aviation.WB.Arm.ArmRangeUpper
                    Data.Aviation.WB.Avgas100LL
                    Data.Aviation.WB.Moment
                    Data.Aviation.WB.Volume
                    Data.Aviation.WB.Weight
